# file-encrypter

./: .gitignore  Cargo.toml  Nothing selected  README.md  config.json  demo.txt
src/: main.rs
